--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
 		"clsx": "^2.1.1",
 		"framer-motion": "^11.15.0",
 		"lucide-react": "^0.468.0",
+		"motion": "^11.15.0",
 		"next": "15.0.4",
 		"next-auth": "^5.0.0-beta.25",
+		"next-themes": "^0.4.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-dropzone": "^14.3.5",
