--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"axios": "^1.7.9",
+		"chart.js": "^4.4.7",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"framer-motion": "^11.15.0",
@@ -20,10 +21,12 @@
 		"next-auth": "^5.0.0-beta.25",
 		"next-themes": "^0.4.4",
 		"react": "^19.0.0",
+		"react-chartjs-2": "^5.3.0",
 		"react-dom": "^19.0.0",
 		"react-dropzone": "^14.3.5",
 		"react-icons": "^5.4.0",
 		"react-toastify": "^11.0.2",
+		"recharts": "^2.15.1",
 		"tailwind-merge": "^2.5.5",
 		"tailwindcss-animate": "^1.0.7"
 	},
