--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@humanwhocodes/object-schema": "^2.0.3",
 		"axios": "^1.7.9",
 		"chart.js": "^4.4.7",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"framer-motion": "^11.15.0",
+		"glob": "^11.0.1",
 		"jszip": "^3.10.1",
 		"lucide-react": "^0.468.0",
 		"motion": "^11.15.0",
@@ -27,6 +29,7 @@
 		"react-icons": "^5.4.0",
 		"react-toastify": "^11.0.2",
 		"recharts": "^2.15.1",
+		"rimraf": "^6.0.1",
 		"tailwind-merge": "^2.5.5",
 		"tailwindcss-animate": "^1.0.7"
 	},
