--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"jszip": "^3.10.1",
 		"lucide-react": "^0.468.0",
 		"motion": "^11.15.0",
-		"next": "14.1.0",
+		"next": "^14.1.0",
 		"next-auth": "^5.0.0-beta.25",
 		"next-themes": "^0.4.4",
 		"react": "^18.2.0",
