--- a/amplify.yml
+++ b/amplify.yml
@@ -10,9 +10,9 @@ applications:
           commands:
             - npm run build
       artifacts:
-        baseDirectory: CLIENT2/out  # Update if build output is in CLIENT2/out
+        baseDirectory: client2/out  # Update if build output is in CLIENT2/out
         files:
           - "**/*"
       cache:
         paths:
-          - CLIENT2/node_modules/**/*
+          - client2/node_modules/**/*
