--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
 		"jszip": "^3.10.1",
 		"lucide-react": "^0.468.0",
 		"motion": "^11.15.0",
-		"next": "^14.1.0",
+		"next": "15.0.4",
 		"next-auth": "^5.0.0-beta.25",
 		"next-themes": "^0.4.4",
-		"react": "^18.2.0",
+		"react": "^19.0.0",
 		"react-chartjs-2": "^5.3.0",
-		"react-dom": "^18.2.0",
+		"react-dom": "^19.0.0",
 		"react-dropzone": "^14.3.5",
 		"react-icons": "^5.4.0",
 		"react-toastify": "^11.0.2",
