--- a/amplify.yml
+++ b/amplify.yml
@@ -1,14 +1,18 @@
-# amplify.yml
 version: 1
-frontend:
-  phases:
-    preBuild:
-      commands:
-        - npm ci  # Clean install
-    build:
-      commands:
-        - npm run build  # Next.js build
-  cache:
-    paths:
-      - node_modules/**/*  # Cache dependencies
-      - .next/cache/**/*   # Cache Next.js build
+applications:
+  - appRoot: .
+    frontend:
+      phases:
+        preBuild:
+          commands:
+            - npm ci
+        build:
+          commands:
+            - npm run build
+      artifacts:
+        baseDirectory: .next
+        files:
+          - '**/*'
+      cache:
+        paths:
+          - node_modules/**/*
